# ChangeLog for dev-util/rapidsvn
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/rapidsvn/Attic/ChangeLog,v 1.55 2008/04/02 02:33:16 nerdboy Exp $

*rapidsvn-0.9.6 (02 Apr 2008)

  02 Apr 2008; Steve Arnold <nerdboy@gentoo.org> +rapidsvn-0.9.6.ebuild:
  Updated to new release and apr prefix, with contributions from Luca 
  Marturana <lucamarturana@gmail.com>.  Smooth as a baby's ...

  10 Jan 2008; Benedikt Böhm <hollow@gentoo.org> rapidsvn-0.9.3.ebuild,
  rapidsvn-0.9.4.ebuild:
  cleanup for bug #203587

  29 Dec 2007; Steve Arnold <nerdboy@gentoo.org> rapidsvn-0.9.3.ebuild,
  rapidsvn-0.9.4.ebuild:
  updated depends for bug 203587, builds and runs on x86 and amd64

  27 Nov 2007; Raúl Porcel <armin76@gentoo.org> rapidsvn-0.9.4.ebuild:
  sparc stable wrt #186809

  25 Nov 2007; Christian Faulhammer <opfer@gentoo.org>
  rapidsvn-0.9.4.ebuild:
  quote variables and remove die statement for epatch, it will die on its own

  25 Nov 2007; Christian Faulhammer <opfer@gentoo.org>
  rapidsvn-0.9.4.ebuild:
  stable x86, bug 186809

  24 Nov 2007; Samuli Suominen <drac@gentoo.org> rapidsvn-0.9.4.ebuild:
  amd64 stable wrt #186809

  24 Nov 2007; nixnut <nixnut@gentoo.org> rapidsvn-0.9.4.ebuild:
  Stable on ppc wrt bug 186809

  24 Nov 2007; Markus Rothe <corsair@gentoo.org> rapidsvn-0.9.4.ebuild:
  Stable on ppc64; bug #186809

  12 Oct 2007; Ryan Hill <dirtyepic@gentoo.org> rapidsvn-0.9.3.ebuild,
  rapidsvn-0.9.4.ebuild:
  Lock wxGTK to 2.6.

  10 Jul 2007; Steve Arnold <nerdboy@gentoo.org> rapidsvn-0.9.3.ebuild,
  rapidsvn-0.9.4.ebuild:
  Updated desktop category and added desktop_database_update to pkg_post
  for conformance to desktop policy.

  26 Jun 2007; Steve Arnold <nerdboy@gentoo.org> rapidsvn-0.9.3.ebuild,
  rapidsvn-0.9.4.ebuild:
  Fixes for bug 180236 as well as desktop and icon fixes.  Set apr deps
  based on subversion and upstream (handle apr-1 correctly).
