@@ -1,9 +1,19 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX rapidsvn-svncpp_link.patch 304 RMD160 3d2b6f48e46e3c5e39a499589043aa09de60d8c6 SHA1 9752592941c10d71f94680ff97e925fee66bc890 SHA256 99a4690987be6f39400a737ca12762495621fc2789fed18c5d9903a8d87ae968
 DIST rapidsvn-0.9.3.tar.gz 998268 RMD160 316904503ab1a067fb14b0567d6e28bc2a6ad6c5 SHA1 71a57ffb4f7944191df51c4a2a87f1c971567543 SHA256 90363935f9a1cb3177d045679db39c94ee44ffc3d67ed63570900ca64771f139
 DIST rapidsvn-0.9.4.tar.gz 1057482 RMD160 edbabab261b69acc78a2009f2da175b2b70c8987 SHA1 0f8eff53964f641253d6a4be82187ab9f30168c7 SHA256 20c6a17ed91171bae6c3af7b611b0f91395cb2962fc0cfe1d66dfd5178d60651
 DIST rapidsvn-0.9.6.tar.gz 1205771 RMD160 060a66d3f268f9a4018f01a9541df2a3394ed7b8 SHA1 266f846437e3bbce1707799ec0d95c2d1be43b4a SHA256 4e026b0e7a56b2a0ba4cd12b1ee224c8d0645e98eb5b682078220f912513b36d
-EBUILD rapidsvn-0.9.3.ebuild 2921 RMD160 fece37dfcb107bfc5a76f35888bc31a09f9ffa96 SHA1 9b09d0b8e0cf223a7ff774fe76b638a4b398c3ae SHA256 db3051fe308e8f2025eb7288a3d4e984b6e8c1aeec081eafbcab35e737360ef6
-EBUILD rapidsvn-0.9.4.ebuild 2880 RMD160 3201671075523e1f8c619241e1d66db7e444167d SHA1 c85f364268a59b93904dc75d5fdf2a4544b4dedd SHA256 2fd388d610b586e73ce083d9a0af31bc9c5822f64905a798cf228a74ee42b2e1
-EBUILD rapidsvn-0.9.6.ebuild 3137 RMD160 c7462f01e0450b4d44b43a3cfafed4fc1c0aebca SHA1 aaf2c682b6ed13a1f6edba9da1c470c4836a3a53 SHA256 a63143a31527dedf5e3fe75022b6625bdf5fad9ba3f037c11d96c44ca07c3d5a
-MISC ChangeLog 8898 RMD160 3f9b48d5ad93280c19214687c3b4cd1aa509e5ad SHA1 0581eb711c734259bf6f20da42ecb8913478f271 SHA256 3392e2abd9e62eccdf217a8d72c86c8ad406d837b6839a54289297593c8252a6
+EBUILD rapidsvn-0.9.3.ebuild 3070 RMD160 fc1106be758a91134978df2743100d489deaae99 SHA1 bbc002f6ac91a972e2461b29facc352bd0ef02dc SHA256 d85f52e95e9581d3695fb41d91cd28f0a1fcbfd0710dc90ab868d19f936f9fe3
+EBUILD rapidsvn-0.9.4.ebuild 3042 RMD160 d581671ea5c3d45c569259c971fcf263e27a60c1 SHA1 b334c23fd4e53e1f8819a862559e956014080e84 SHA256 541a247e10c4c731340458499804be9914bfa353cdfe5991f6d061ae1cfc161f
+EBUILD rapidsvn-0.9.6.ebuild 3298 RMD160 2c3509fe03a561a4018b927b2989025dffbd4ea9 SHA1 e81a60b9bfc25560c95bfde4c3fa76e3db37df9f SHA256 d52949a11e641e4b54f643ecdefa89d5ae4a15796188fa5343f8dbd8b74b8406
+MISC ChangeLog 9058 RMD160 c524da11dee639248ce6f406914e4cc110dfc5dc SHA1 f12ea73b151927567c254e949184386762784de3 SHA256 66c02bad7cc13e79e54893ff467a3218a02f5d8943f2b2059835ad328c394c05
 MISC metadata.xml 518 RMD160 b9c97307a72d2c0ae05deb166229ffc603d8855b SHA1 6b9c6a8c99c7dd184cf048b4e306f0a0e5f81788 SHA256 b7e173df02d2585da2771a95e6acd8ae824e61887087747d227b9ea07bf0b435
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkgY2awACgkQmPFBzbX68WEIuACfVTsDRYOXGCsoiIDRQXFab95t
+oxAAn2NGLDYFr/tlCTSBvPdk7TWXkm8r
+=/UoR
+-----END PGP SIGNATURE-----
