@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/rapidsvn
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/rapidsvn/Attic/ChangeLog,v 1.55 2008/04/02 02:33:16 nerdboy Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/rapidsvn/Attic/ChangeLog,v 1.56 2008/04/30 20:42:07 hollow Exp $
+
+  30 Apr 2008; Benedikt Böhm <hollow@gentoo.org> rapidsvn-0.9.3.ebuild,
+  rapidsvn-0.9.4.ebuild, rapidsvn-0.9.6.ebuild:
+  update subversion checks wrt #219475
 
 *rapidsvn-0.9.6 (02 Apr 2008)
 
